# redlock_batched

./: Cargo.toml  README.md
src/: lib.rs  redis_cmd.rs
src/locks/: create.rs  delete.rs  manager.rs  mod.rs  update.rs
tests/: integration_test.rs  readme_example.rs
