[package]
name = "redlock_batched"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Creating, updating and deleting redis locks (Redlock) in batches"
repository = "https://github.com/raui100/redlock_batched"
authors = ["Raui Ghazaleh <rj.ghazaleh@gmail.com>"]
readme = "README.md"

[dependencies]
redis = { version = "0.29.0", features = ["aio", "connection-manager", "tokio-comp"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.14.0", features = ["v4"] }

[dev-dependencies]
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["redis"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
